--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,11 +81,10 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - checkout
-      # Seems that something wrong is cached
-      # Without this, XRP Settlements on docker mode fail
-      - run:
-          name: Clear docker cache
-          command: docker images --no-trunc --format '{{.ID}}' interledgerrs/settlement-engines | xargs --no-run-if-empty docker rmi
+      # If something wrong is cached, use these lines
+      #- run:
+      #    name: Clear docker cache
+      #    command: docker images --no-trunc --format '{{.ID}}' interledgerrs/settlement-engines | xargs --no-run-if-empty docker rmi
       - restore_cache:
           keys:
             - cargo-cache-2-{{ checksum "Cargo.lock" }}-{{ .Branch }}
