ci(ci): publish binaries when tags are pushed
Signed-off-by: Taiga Nakayama <dora@dora-gt.jp>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,3 @@
-# Cache spec
-# - cargo-cache-1
-#    - contents: .cargo
-#    - based on: Cargo.toml
-# - cargo-cache-2
-#    - contents: .cargo
-#    - based on: Cargo.lock
-
 version: 2
 jobs:
   build:
@@ -17,7 +9,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Reduce codegen units
+          name: Reduce codegen Units
           # If we don't include this, the linker runs out of memory when building
           # the project on CI. We don't include this normally though because
           # it should be able to build with more units on other machines
@@ -69,6 +61,7 @@ jobs:
   test-md:
     docker:
       - image: interledgerrs/circleci-rust-dind:latest
+    resource_class: medium+
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
@@ -94,7 +87,7 @@ jobs:
       - run:
           # builds dev profile images because these images are not going to be released
           # also, we have to copy binaries so remove target from .dockerignore
-          name: Build docker images
+          name: Build Docker Images
           command: |
             dockerignore=$(cat .dockerignore | sed /^target/d)
             echo "$dockerignore" > .dockerignore
@@ -104,7 +97,7 @@ jobs:
             echo "target/**/incremental" >> .dockerignore
             docker/docker-build.sh ci-node ci-ilp-cli
       - run:
-          name: Run run-md test
+          name: Run run-md Test
           command: scripts/run-md-test.sh
       - store_artifacts:
           path: /tmp/run-md-test
@@ -112,18 +105,19 @@ jobs:
   update-docker-images:
     docker:
       - image: interledgerrs/circleci-rust-dind:latest
+    resource_class: medium+
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
       - checkout
       - run:
           # builds release profile images to be released
-          name: Build docker images
+          name: Build Docker Images
           command: |
-            export DOCKER_IMAGE_TAG=$(./.circleci/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
+            export DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
             docker/docker-build.sh node testnet-bundle
 
-            export DOCKER_IMAGE_TAG=$(./.circleci/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
+            export DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
             docker/docker-build.sh ilp-cli
           environment:
             PROFILE: "release"
@@ -132,18 +126,118 @@ jobs:
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
 
-            DOCKER_IMAGE_TAG=$(./.circleci/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
+            DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
             echo "Pushing docker image of tag: interledgerrs/node:${DOCKER_IMAGE_TAG}"
             docker push interledgerrs/node:${DOCKER_IMAGE_TAG}
             docker push interledgerrs/testnet-bundle:${DOCKER_IMAGE_TAG}
 
-            DOCKER_IMAGE_TAG=$(./.circleci/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
+            DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
             echo "Pushing docker image of tag: interledgerrs/ilp-cli:${DOCKER_IMAGE_TAG}"
             docker push interledgerrs/ilp-cli:${DOCKER_IMAGE_TAG}
+  build-release-binary-linux:
+    docker:
+      - image: interledgerrs/circleci-rust-dind:latest
+    resource_class: medium+
+    steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - checkout
+      - run:
+          # Builds release profile binaries
+          # The artifact is stored in release-builds directory, which is persistent
+          name: Build binary
+          command: |
+            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
+            printf "Building crate_name: %s, tag: %s\n" "${crate_name}" "${CIRCLE_TAG}"
+            ./.circleci/release/build.sh x86_64-unknown-linux-musl ${crate_name}
+            mkdir -p /tmp/release-builds/x86_64-unknown-linux-musl
+            cp target/x86_64-unknown-linux-musl/release/${crate_name} /tmp/release-builds/x86_64-unknown-linux-musl/${crate_name}
+      - persist_to_workspace:
+          root: /tmp/release-builds
+          paths:
+            - x86_64-unknown-linux-musl/*
+      - store_artifacts:
+          path: /tmp/release-builds/x86_64-unknown-linux-musl
+          destination: release-builds/x86_64-unknown-linux-musl
+  build-release-binary-darwin:
+    macos:
+      xcode: "10.2.0"
+    resource_class: medium+
+    steps:
+      - checkout
+      - run:
+          name: Install Rust
+          command: |
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.38.0
+      - run:
+          # Builds release profile binaries
+          # The artifact is stored in release-builds directory, which is persistent
+          name: Build binary
+          command: |
+            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
+            printf "Building crate_name: %s, tag: %s\n" "${crate_name}" "${CIRCLE_TAG}"
+            ./.circleci/release/build.sh x86_64-apple-darwin ${crate_name}
+            mkdir -p /tmp/release-builds/x86_64-apple-darwin
+            cp target/x86_64-apple-darwin/release/${crate_name} /tmp/release-builds/x86_64-apple-darwin/${crate_name}
+      - persist_to_workspace:
+          root: /tmp/release-builds
+          paths:
+            - x86_64-apple-darwin/*
+      - store_artifacts:
+          path: /tmp/release-builds/x86_64-apple-darwin
+          destination: release-builds/x86_64-apple-darwin
+  release-binaries:
+    docker:
+      - image: interledgerrs/circleci-rust-dind:latest
+    steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - attach_workspace:
+          at: /tmp/release-builds
+      - checkout
+      - run:
+          name: Release Binaries
+          command: |
+            mkdir -p logs
+            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
+
+            # linux musl
+            base_dir=/tmp/release-builds/x86_64-unknown-linux-musl
+            pushd ${base_dir}
+            musl_zip="${base_dir}/${crate_name}-x86_64-unknown-linux-musl.zip"
+            musl_tar_gz="${base_dir}/${crate_name}-x86_64-unknown-linux-musl.tar.gz"
+            zip $(basename ${musl_zip}) ${crate_name}
+            tar -zcvf $(basename ${musl_tar_gz}) ${crate_name}
+            popd
+
+            # macOS
+            base_dir=/tmp/release-builds/x86_64-apple-darwin
+            pushd ${base_dir}
+            darwin_zip="${base_dir}/${crate_name}-x86_64-apple-darwin.zip"
+            darwin_tar_gz="${base_dir}/${crate_name}-x86_64-apple-darwin.tar.gz"
+            zip $(basename ${darwin_zip}) ${crate_name}
+            tar -zcvf $(basename ${darwin_tar_gz}) ${crate_name}
+            popd
+
+            # Auto-generate a release note
+            release_note=logs/release_note.txt
+            conventional-changelog -t ${crate_name}- -p angular > ${release_note}
+
+            ./.circleci/release/github_release.sh \
+              ${CIRCLE_TAG} \
+              ${CIRCLE_TAG} \
+              ${release_note} \
+              ${musl_zip} \
+              ${musl_tar_gz} \
+              ${darwin_zip} \
+              ${darwin_tar_gz}
+      - store_artifacts:
+          path: logs
+          destination: release-binaries-logs
 
 workflows:
   version: 2
-  build-and-test-md:
+  test-and-release:
     jobs:
       - build:
           filters:
@@ -165,4 +259,34 @@ workflows:
                 - /^(ilp-node-|ilp-cli-).*$/
           requires:
             - build
-            - test-md
+      - build-release-binary-linux:
+          filters:
+            branches:
+              ignore: # no branch pushes are built
+                - /.*/
+            tags:
+              only: # whatever tagged binary crates
+                - /^(ilp-node-|ilp-cli-).*$/
+          requires:
+            - build
+      - build-release-binary-darwin:
+          filters:
+            branches:
+              ignore: # no branch pushes are built
+                - /.*/
+            tags:
+              only: # whatever tagged binary crates
+                - /^(ilp-node-|ilp-cli-).*$/
+          requires:
+            - build
+      - release-binaries:
+          filters:
+            branches:
+              ignore: # no branch pushes are built
+                - /.*/
+            tags:
+              only: # whatever tagged binary crates
+                - /^(ilp-node-|ilp-cli-).*$/
+          requires:
+            - build-release-binary-linux
+            - build-release-binary-darwin
