--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,298 +1,17 @@
-# Cache spec
-# - cargo-cache-1
-#    - contents: .cargo
-#    - based on: Cargo.toml
-# - cargo-cache-2
-#    - contents: .cargo
-#    - based on: Cargo.lock
-
 version: 2
 jobs:
   build:
-    docker:
-      - image: interledgerrs/circleci-rust-dind:latest
-        environment:
-          CARGO_HOME: /home/circleci/.cargo
-    resource_class: medium+
+    macos:
+      xcode: "10.2.0"
     steps:
       - checkout
       - run:
-          name: Reduce codegen Units
-          # If we don't include this, the linker runs out of memory when building
-          # the project on CI. We don't include this normally though because
-          # it should be able to build with more units on other machines
-          command: printf "[profile.dev]\ncodegen-units = 1\n" >> Cargo.toml
-      - run:
-          name: Build
-          command: cargo build --all-features --all-targets
-      - run:
-          name: Test
-          # Note the timeout is included to make sure that they
-          # do not run for more than 10 minutes under any circumstances
-          # (We have had issues with bugs causing the tests to "run"
-          # for 5 hours, wasting a ton of compute credits)
-          command: timeout 10m cargo test --all --all-features
-          environment:
-            - RUST_LOG: "interledger=trace"
-            - RUST_BACKTRACE: "full"
-      - run:
-          name: Check Style
+          name: Install Rust
           command: |
-            cargo fmt --all -- --check
-            cargo clippy --all-targets --all-features -- -D warnings
-      - run:
-          name: Audit Dependencies
-          command: cargo audit
-      # - run:
-      #     name: Install kcov
-      #     command: >-
-      #       kcov --version ||
-      #       (sudo apt-get install cmake g++ pkg-config jq libcurl4-openssl-dev libelf-dev libdw-dev binutils-dev libiberty-dev
-      #       && cargo kcov --print-install-kcov-sh | sh)
-      # - run:
-      #     name: Generate Coverage Report
-      #     # Enable sudo to avoid the error: "Can't set personality: Operation not permitted"
-      #     # See discussion in https://github.com/travis-ci/travis-ci/issues/9061
-      #     sudo: required
-      #     command:
-      #       cargo kcov --all --verbose
-      #       # -- --verify
-      #       # --exclude-region="kcov-ignore-start:kcov-ignore-end"
-      #       # --exclude-pattern="$CARGO_HOME,**/tests/**"
-      #       # --exclude-line="^(\)*\}*,*)$"
-      #     environment:
-      #       # Configure the redis tests to use a unix socket instead of TCP
-      #       REDISRS_SERVER_TYPE: unix
-      # - run:
-      #     name: Upload Code Coverage
-      #     command: "bash <(curl -s https://codecov.io/bash)"
-  test-md:
-    docker:
-      - image: interledgerrs/circleci-rust-dind:latest
-    resource_class: medium+
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      # If something wrong is cached, use these lines
-#      - run:
-#          name: Clear docker cache
-#          command: docker images --no-trunc --format '{{.ID}}' interledgerrs/settlement-engines | xargs --no-run-if-empty docker rmi
-      - run:
-          # Although we use `docker_layer_caching`, we need to pull these latest images
-          name: Pull Docker Images
-          command: |
-            docker pull interledgerrs/settlement-engines:latest
-            docker pull interledgerjs/settlement-xrp:latest
-      - run:
-          name: Set Default Target musl
-          command: |
-            mkdir -p .cargo
-            printf "[build]\ntarget = \"x86_64-unknown-linux-musl\"\n" > .cargo/config
-      - run:
-          name: Build
-          command: cargo build --bin ilp-node --bin ilp-cli
-      - run:
-          # builds dev profile images because these images are not going to be released
-          # also, we have to copy binaries so remove target from .dockerignore
-          name: Build Docker Images
-          command: |
-            dockerignore=$(cat .dockerignore | sed /^target/d)
-            echo "$dockerignore" > .dockerignore
-            echo "target/**/*.d" >> .dockerignore
-            echo "target/**/*.rlib" >> .dockerignore
-            echo "target/**/deps" >> .dockerignore
-            echo "target/**/incremental" >> .dockerignore
-            docker/docker-build.sh ci-node ci-ilp-cli
-      - run:
-          name: Run run-md Test
-          command: scripts/run-md-test.sh
-      - store_artifacts:
-          path: /tmp/run-md-test
-          destination: run-md-test
-  update-docker-images:
-    docker:
-      - image: interledgerrs/circleci-rust-dind:latest
-    resource_class: medium+
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run:
-          # builds release profile images to be released
-          name: Build Docker Images
-          command: |
-            export DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
-            docker/docker-build.sh node testnet-bundle
-
-            export DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
-            docker/docker-build.sh ilp-cli
-          environment:
-            PROFILE: "release"
-      - run:
-          name: Push to DockerHub
-          command: |
-            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-
-            DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-node ${CIRCLE_TAG})
-            echo "Pushing docker image of tag: interledgerrs/node:${DOCKER_IMAGE_TAG}"
-            docker push interledgerrs/node:${DOCKER_IMAGE_TAG}
-            docker push interledgerrs/testnet-bundle:${DOCKER_IMAGE_TAG}
-
-            DOCKER_IMAGE_TAG=$(./.circleci/release/get_docker_image_tag.sh ilp-cli ${CIRCLE_TAG})
-            echo "Pushing docker image of tag: interledgerrs/ilp-cli:${DOCKER_IMAGE_TAG}"
-            docker push interledgerrs/ilp-cli:${DOCKER_IMAGE_TAG}
-  build-release-binary-linux:
-    docker:
-      - image: interledgerrs/circleci-rust-dind:latest
-    resource_class: medium+
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run:
-          # Builds release profile binaries
-          # The artifact is stored in release-builds directory, which is persistent
-          name: Build binary
-          command: |
-            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
-            printf "Building crate_name: %s, tag: %s\n" "${crate_name}" "${CIRCLE_TAG}"
-            ./.circleci/release/build.sh x86_64-unknown-linux-musl ${crate_name}
-            mkdir -p /tmp/release-builds/x86_64-unknown-linux-musl
-            cp target/x86_64-unknown-linux-musl/release/${crate_name} /tmp/release-builds/x86_64-unknown-linux-musl/${crate_name}
-      - persist_to_workspace:
-          root: /tmp/release-builds
-          paths:
-            - x86_64-unknown-linux-musl/*
-      - store_artifacts:
-          path: /tmp/release-builds/x86_64-unknown-linux-musl
-          destination: release-builds/x86_64-unknown-linux-musl
-  build-release-binary-darwin:
-    docker:
-      - image: interledgerrs/circleci-rust-mac:latest
-    resource_class: medium+
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run:
-          # Builds release profile binaries
-          # The artifact is stored in release-builds directory, which is persistent
-          name: Build binary
-          command: |
-            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
-            printf "Building crate_name: %s, tag: %s\n" "${crate_name}" "${CIRCLE_TAG}"
-            ./.circleci/release/build.sh x86_64-apple-darwin ${crate_name}
-            mkdir -p /tmp/release-builds/x86_64-apple-darwin
-            cp target/x86_64-apple-darwin/release/${crate_name} /tmp/release-builds/x86_64-apple-darwin/${crate_name}
-      - persist_to_workspace:
-          root: /tmp/release-builds
-          paths:
-            - x86_64-apple-darwin/*
-      - store_artifacts:
-          path: /tmp/release-builds/x86_64-apple-darwin
-          destination: release-builds/x86_64-apple-darwin
-  release-binaries:
-    docker:
-      - image: interledgerrs/circleci-rust-dind:latest
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - attach_workspace:
-          at: /tmp/release-builds
-      - checkout
-      - run:
-          name: Release Binaries
-          command: |
-            mkdir -p logs
-            crate_name=$(./.circleci/release/get_crate_name.sh ${CIRCLE_TAG})
-
-            # linux musl
-            base_dir=/tmp/release-builds/x86_64-unknown-linux-musl
-            pushd ${base_dir}
-            musl_zip="${base_dir}/${crate_name}-x86_64-unknown-linux-musl.zip"
-            musl_tar_gz="${base_dir}/${crate_name}-x86_64-unknown-linux-musl.tar.gz"
-            zip $(basename ${musl_zip}) ${crate_name}
-            tar -zcvf $(basename ${musl_tar_gz}) ${crate_name}
-            popd
-
-            # macOS
-            base_dir=/tmp/release-builds/x86_64-apple-darwin
-            pushd ${base_dir}
-            darwin_zip="${base_dir}/${crate_name}-x86_64-apple-darwin.zip"
-            darwin_tar_gz="${base_dir}/${crate_name}-x86_64-apple-darwin.tar.gz"
-            zip $(basename ${darwin_zip}) ${crate_name}
-            tar -zcvf $(basename ${darwin_tar_gz}) ${crate_name}
-            popd
-
-            # Auto-generate a release note
-            release_note=logs/release_note.txt
-            conventional-changelog -t ${crate_name}- -p angular > ${release_note}
-
-            ./.circleci/release/github_release.sh \
-              ${CIRCLE_TAG} \
-              ${CIRCLE_TAG} \
-              ${release_note} \
-              ${musl_zip} \
-              ${musl_tar_gz} \
-              ${darwin_zip} \
-              ${darwin_tar_gz}
-      - store_artifacts:
-          path: logs
-          destination: release-binaries-logs
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 
 workflows:
   version: 2
   test-and-release:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: # we need this to kick builds when tags are given
-                - /.*/
-      - test-md:
-          filters:
-            tags:
-              only: # we need this to kick builds when tags are given
-                - /.*/
-      - update-docker-images: # updates docker images on DockerHub, only if the branch is master or something is tagged
-          filters:
-            branches:
-              only: # master branch will be tagged as `latest` image
-                - master
-            tags:
-              only: # whatever tagged binary crates
-                - /^(ilp-node-|ilp-cli-).*$/
-          requires:
-            - build
-      - build-release-binary-linux:
-          filters:
-            branches:
-              ignore: # no branch pushes are built
-                - /.*/
-            tags:
-              only: # whatever tagged binary crates
-                - /^(ilp-node-|ilp-cli-).*$/
-          requires:
-            - build
-      - build-release-binary-darwin:
-          filters:
-            branches:
-              ignore: # no branch pushes are built
-                - /.*/
-            tags:
-              only: # whatever tagged binary crates
-                - /^(ilp-node-|ilp-cli-).*$/
-          requires:
-            - build
-      - release-binaries:
-          filters:
-            branches:
-              ignore: # no branch pushes are built
-                - /.*/
-            tags:
-              only: # whatever tagged binary crates
-                - /^(ilp-node-|ilp-cli-).*$/
-          requires:
-            - build-release-binary-linux
-            - build-release-binary-darwin
+      - build
