--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
           name: Install Rust
           command: |
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.38.0
+      - run:
+          name: Build
+          command: |
             cargo build
           environment:
             - PATH: "$HOME/.cargo/bin:$PATH"
